--- a/vercel.json
+++ b/vercel.json
@@ -33,6 +33,6 @@
         "DB_DATABASE": "defaultdb",
         "DB_USERNAME": "avnadmin",
         "DB_PASSWORD": "AVNS_YFiaCehFNM5WHIUGULJ",
-        "MYSQL_ATTR_SSL_CA": "/etc/ssl/certs/ca-certificates.crt"
+        "MYSQL_ATTR_SSL_CA": "/var/task/user/storage/ca.pem"
     }
 }
