--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,12 @@
         "api/index.php": { "runtime": "vercel-php@0.7.1" }
     },
     "routes": [
-        { "handle": "filesystem" },
+        { "src": "/build/(.*)", "dest": "/public/build/$1" },
+        { "src": "/assets/(.*)", "dest": "/public/assets/$1" },
+        { "src": "/images/(.*)", "dest": "/public/images/$1" },
+        { "src": "/sweetalert/(.*)", "dest": "/public/sweetalert/$1" },
+        { "src": "/favicon.ico", "dest": "/public/favicon.ico" },
+        { "src": "/robots.txt", "dest": "/public/robots.txt" },
         { "src": "/(.*)", "dest": "/api/index.php" }
     ],
     "public": true,
