feat: Implement motor and transaction management with document upload capabilities and associated views.

--- a/.env
+++ b/.env
@@ -71,3 +71,4 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+CLOUDINARY_URL=cloudinary://634128972655365:SvG-hctL4FgbVuvVCmQ-H11dm8g@dxds17iyz
