--- a/vercel-backup/.env
+++ b/vercel-backup/.env
@@ -20,20 +20,20 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=mysql
-# DB_HOST=mysql-ff21c41-darrelrangga-b835.g.aivencloud.com
-# DB_PORT=10151
-# DB_DATABASE=defaultdb
-# DB_USERNAME=avnadmin
-# DB_PASSWORD=AVNS_YFiaCehFNM5WHIUGULJ
-# MYSQL_ATTR_SSL_CA="d:/laragon/www/SrbMotor/storage/ca.pem"
-
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=SrbMotor
-DB_USERNAME=root
-DB_PASSWORD=
+DB_HOST=mysql-ff21c41-darrelrangga-b835.g.aivencloud.com
+DB_PORT=10151
+DB_DATABASE=defaultdb
+DB_USERNAME=avnadmin
+DB_PASSWORD=AVNS_YFiaCehFNM5WHIUGULJ
+MYSQL_ATTR_SSL_CA="d:/laragon/www/SrbMotor/storage/ca.pem"
+
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=SrbMotor
+# DB_USERNAME=root
+# DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
