feat: Integrate Midtrans payment gateway and implement installment payment functionality with new routes and controllers.

--- a/.env
+++ b/.env
@@ -72,3 +72,8 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
+MIDTRANS_SERVER_KEY=Mid-server-q1kUecRxL9JDtnYIbxzPOHhZ
+MIDTRANS_CLIENT_KEY=MMid-client-aAUNIuf1fCSll2qz
+MIDTRANS_ENVIRONMENT=sandbox
+MIDTRANS_PAYMENT_URL=https://app.sandbox.midtrans.com
+MIDTRANS_API_URL=https://api.sandbox.midtrans.com/v2/
