feat: Implement installment payment system, online payment integration, motor order forms, document management, and admin transaction views with full routing.

--- a/.env
+++ b/.env
@@ -77,3 +77,6 @@ MIDTRANS_CLIENT_KEY=MMid-client-aAUNIuf1fCSll2qz
 MIDTRANS_ENVIRONMENT=sandbox
 MIDTRANS_PAYMENT_URL=https://app.sandbox.midtrans.com
 MIDTRANS_API_URL=https://api.sandbox.midtrans.com/v2/
+
+
+FONNTE_TOKEN=3drDKUjdA4JbdyLTA1YNVDZiBGAKqJqiUZark2EkLZWGAex9
