feat: Implement installment payment system with Midtrans integration, payment proof uploads, PDF receipts, and WhatsApp notifications, alongside new controllers for payment callbacks, transactions, and motor galleries.

--- a/.env
+++ b/.env
@@ -80,3 +80,4 @@ MIDTRANS_API_URL=https://api.sandbox.midtrans.com/v2/
 
 
 FONNTE_TOKEN=3drDKUjdA4JbdyLTA1YNVDZiBGAKqJqiUZark2EkLZWGAex9
+ADMIN_PHONE="08978638973"
