--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "framer-motion": "^12.23.25",
         "lucide-react": "^0.556.0",
         "react-hot-toast": "^2.6.0",
+        "react-to-print": "^3.2.0",
         "recharts": "^3.5.1",
         "sweetalert2": "^11.26.4",
         "swiper": "^12.0.3",
